2014-01-30  Simon Fraser  <simon.fraser@apple.com>

        Make iOS fixed layer registration more like OS X
        https://bugs.webkit.org/show_bug.cgi?id=127983

        Reviewed by Antti Koivisto.

        Remove some #if PLATFORM(IOS) in the code related to registering
        viewport-constrained layers. The code behaves correctly now in WK1
        and WK2 based on the presence of a ScrollingCoordinator.

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::flushPendingLayerChanges):
        (WebCore::nearestScrollingCoordinatorAncestor):
        (WebCore::RenderLayerCompositor::registerOrUpdateViewportConstrainedLayer):
        (WebCore::RenderLayerCompositor::unregisterViewportConstrainedLayer):

2014-01-31  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r163165.
        http://trac.webkit.org/changeset/163165
        https://bugs.webkit.org/show_bug.cgi?id=127997

        broke 2 fast/table tests (Requested by kling on #webkit).

        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::updateLogicalWidth):
        (WebCore::RenderTable::computePreferredLogicalWidths):

2014-01-31  Anders Carlsson  <andersca@apple.com>

        Don't allocate a new XMLHttpRequestStaticData every time staticData() is called
        https://bugs.webkit.org/show_bug.cgi?id=127996

        Reviewed by Andreas Kling.

        std::once_flag should be static.

        * xml/XMLHttpRequest.cpp:
        (WebCore::staticData):

2014-01-31  Zalan Bujtas  <zalan@apple.com>

        Subpixel rendering: Change RenderBoxModelObject's border functions' signature to support subpixel border painting.
        https://bugs.webkit.org/show_bug.cgi?id=127975

        Reviewed by Simon Fraser.

        From int to LayoutUnit.

        Covered by existing tests. No change in functionality.

        * platform/text/TextStream.cpp:
        (WebCore::TextStream::operator<<):
        * platform/text/TextStream.h: