@@ -1698,28 +1698,6 @@ static bool intervalsSufficientlyOverlap(int startA, int endA, int startB, int e
     return minEnd - maxStart >= sufficientOverlap * std::min(lengthA, lengthB);
 }
 
-#ifndef NDEBUG
-static void printRects(Vector<SelectionRect>& rects)
-{
-    size_t numberOfRects = rects.size();
-    for (size_t i = 0; i < numberOfRects; ++i) {
-        fprintf(stderr, "%zu\t[%d, %d] - [%d, %d]\t%c %s\tis first: %s\tis last:%s\tcontains start: %s\tcontains end: %s\tline: %d\truby: %s\tcolumn: %d\n",
-            i,
-            rects[i].rect().x(), rects[i].rect().y(), rects[i].rect().width(), rects[i].rect().height(),
-            rects[i].isHorizontal() ? 'H' : 'V',
-            rects[i].direction() == LTR ? "LTR" : "RTL",
-            rects[i].isFirstOnLine() ? "yes" : "no",
-            rects[i].isLastOnLine() ? "yes" : "no",
-            rects[i].containsStart() ? "yes" : "no",
-            rects[i].containsEnd() ? "yes" : "no",
-            rects[i].lineNumber(),
-            rects[i].isRubyText() ? "yes": "no",
-            rects[i].columnNumber());
-    }
-    fprintf(stderr, "--------------------------------------\n");
-}
-#endif
-
 static inline void adjustLineHeightOfSelectionRects(Vector<SelectionRect>& rects, size_t numberOfRects, int lineNumber, int lineTop, int lineHeight)
 {
     ASSERT(rects.size() >= numberOfRects);
@@ -1790,10 +1768,6 @@ void Range::collectSelectionRects(Vector<SelectionRect>& rects)
             newRects.shrink(0);
         }
     }
-
-#ifndef NDEBUG
-    printRects(rects);
-#endif
 
     // The range could span over nodes with different writing modes.
     // If this is the case, we use the writing mode of the common ancestor.
